# tetristy

./: CMakeLists.txt  README.md
src/: blocks.c  blocks.h  board.c  board.h  colors.c  colors.h  game.c  game.h  main.c  util.c  util.h
